<resources>
    <string name="app_name">TAM</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="not_have_account">Don\'t have an account? Sign up</string>
    <string name="skip">Skip</string>
    <string name="sign_in">Sign in</string>
    <string name="is_empty">Required</string>
    <string name="error_email_format">Invalid Email Address</string>
    <string name="password_invalid">"Password length less than 8 "</string>
    <string name="login_error">Login Error</string>
    <string name="incoreect_login">Incorrect email or password</string>
    <string name="loading_login">Loading Login Plz …</string>
    <string name="filter">filter</string>
    <string name="fav">fav</string>
    <string name="search">search</string>
    <string name="shops">shops</string>
    <string name="discovery">Discovery</string>
    <string name="the_new">What\'s New!</string>
    <string name="trending">Trending</string>
    <string name="loading_home">Loading Home …</string>
    <string name="no_data">No any Data </string>
    <string name="check_network">Please check your internet connection and try again</string>
    <string name="no_internet">No internet connection!</string>
    <string name="connection_start">Internet Connection</string>
</resources>