<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="sign_in"
            type="azmithabet.com.tam.ui.activity.SignIn"/>
    </data>
   <ScrollView
       android:layout_width="match_parent"
       android:background="@color/black"

       android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.SignIn"
         >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/_100sdp"
            android:contentDescription="@string/app_name" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_box"
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_62sdp"
            android:layout_marginEnd="@dimen/_62sdp"
            android:layout_marginTop="@dimen/_46sdp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
           android:background="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/email"
                android:background="@android:color/transparent"
                android:gravity="center"
                 android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:fontFamily="@font/ample_soft_pro_bold"
                android:imeOptions="flagNoExtractUi" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_box"
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_box"
            app:passwordToggleEnabled="true"
            android:layout_marginStart="@dimen/_62sdp"
            android:layout_marginEnd="@dimen/_62sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/gradient"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
             >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@android:color/transparent"

                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/ample_soft_pro_bold"
                android:textCursorDrawable="@null"
               android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:gravity="center"

                android:imeOptions="flagNoExtractUi" />

        </com.google.android.material.textfield.TextInputLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forget_password"
    android:textColor="@color/start_color_gradient"
    app:layout_constraintTop_toBottomOf="@+id/pass_box"
    app:layout_constraintEnd_toEndOf="@+id/pass_box"
    android:layout_marginTop="@dimen/_5sdp"
    android:id="@+id/forget_password"
    android:fontFamily="@font/ample_soft_pro_bold"

    />

<Button
    android:layout_width="match_parent"
    android:layout_height="@dimen/_40sdp"
    android:layout_marginStart="@dimen/_83sdp"
    android:layout_marginEnd="@dimen/_83sdp"
    android:layout_marginTop="@dimen/_16sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/forget_password"
    android:background="@drawable/gradient"
    android:textColor="@color/text_color"
    android:textSize="@dimen/_12ssp"
    android:fontFamily="@font/ample_soft_pro_bold"
    android:id="@+id/login_bu"
    android:textAllCaps="false"
    android:text="@string/sign_in"
    android:onClick="@{() -> sign_in.signIn()}"

    />
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintTop_toBottomOf="@+id/login_bu"
     android:text="@string/not_have_account"
     android:gravity="center"
     android:textColor="@color/start_color_gradient"
     android:layout_marginTop="@dimen/_30sdp"
     android:textSize="@dimen/_15ssp"
     android:id="@+id/not_have_account"
     android:fontFamily="@font/ample_soft_pro_bold"
     />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/not_have_account"
            android:text="@string/skip"
            android:gravity="center"
            android:textColor="@color/start_color_gradient"
            android:layout_marginTop="@dimen/_30sdp"
            android:textSize="@dimen/_15ssp"
            android:id="@+id/skip"
            android:fontFamily="@font/ample_soft_pro_bold"
            android:onClick="@{() -> sign_in.skip()}"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>

</layout>